--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,22 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.dashboard.DashboardFragment">
+    tools:context=".ui.landing.dashboard.DashboardFragment">
 
-    <TextView
-        android:id="@+id/text_dashboard"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:background="#F4F4F4">
+
+        <TextView
+            android:id="@+id/welcomeTextTV"
+            style="@style/Covid19TextView"
+            android:text="Hello Survivor"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="@dimen/horizontal_margin"
+            android:layout_marginTop="46dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/casesSummaryRV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/welcomeTextTV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="24dp"
+            tools:listitem="@layout/item_cases_summary"
+            tools:itemCount="3"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/handHygieneCV"
+            android:layout_width="0dp"
+            android:layout_height="112dp"
+            app:layout_constraintTop_toBottomOf="@id/casesSummaryRV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="56dp"
+            app:cardBackgroundColor="#F47920"
+            app:cardCornerRadius="8dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/whoLogoIV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/handHygieneTV"
+                    android:src="@drawable/ic_who_logo_white"
+                    app:layout_constraintVertical_chainStyle="packed"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginStart="@dimen/horizontal_margin"/>
+
+                <TextView
+                    android:id="@+id/handHygieneTV"
+                    style="@style/Covid19TextView.Body.Bold"
+                    android:text="@string/hand_hygiene_title"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@id/whoLogoIV"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginStart="@dimen/horizontal_margin"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/casesTitleTV"
+            style="@style/Covid19TextView.Head.Title"
+            android:layout_width="0dp"
+            android:text="@string/cases_title"
+            android:textColor="@color/colorPrimary"
+            app:layout_constraintTop_toBottomOf="@id/handHygieneCV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="56dp"
+            android:layout_marginStart="@dimen/horizontal_margin"
+            android:layout_marginEnd="@dimen/horizontal_margin"/>
+
+        <TextView
+            android:id="@+id/lastUpdatedTV"
+            style="@style/Covid19TextView.Body.Bold"
+            android:text="@string/title_last_updated"
+            android:textColor="@color/ash"
+            app:layout_constraintTop_toTopOf="@id/filterIV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/filterIV"
+            android:layout_marginStart="@dimen/horizontal_margin"/>
+
+        <TextView
+            android:id="@+id/lastUpdatedValueTV"
+            style="@style/Covid19TextView.Body.Bold"
+            android:text="12:30PM Today"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toTopOf="@id/lastUpdatedTV"
+            app:layout_constraintStart_toEndOf="@id/lastUpdatedTV"/>
+
+        <ImageView
+            android:id="@+id/filterIV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_filter"
+            app:layout_constraintTop_toBottomOf="@id/casesTitleTV"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/horizontal_margin"
+            android:layout_marginTop="26dp"/>
+
+        <ImageView
+            android:id="@+id/searchIV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_search"
+            app:layout_constraintTop_toTopOf="@id/filterIV"
+            app:layout_constraintEnd_toStartOf="@id/filterIV"
+            android:layout_marginEnd="28dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/casesRV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/item_country_case_numbers"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/filterIV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.core.widget.NestedScrollView>
