Added Cases Summary Adapter

--- a/app/src/main/res/layout/item_cases_summary.xml
+++ b/app/src/main/res/layout/item_cases_summary.xml
@@ -5,8 +5,10 @@
     android:layout_height="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginStart="20dp"
-    app:cardCornerRadius="8dp">
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
+    app:cardCornerRadius="8dp"
+    android:id="@+id/casesSummaryCV">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
