--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -32,6 +32,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="24dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             tools:listitem="@layout/item_cases_summary"
             tools:itemCount="3"
             android:orientation="horizontal"
