--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -34,6 +34,7 @@
             android:layout_marginTop="24dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
+            android:clipToPadding="false"
             tools:listitem="@layout/item_cases_summary"
             tools:itemCount="3"
             android:orientation="horizontal"
@@ -48,7 +49,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="48dp"
             app:cardBackgroundColor="#F47920"
             app:cardCornerRadius="8dp">
 
@@ -78,6 +79,13 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginTop="4dp"
                     android:layout_marginStart="@dimen/horizontal_margin"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_who_light_logo"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
