--- a/app/src/main/res/layout/item_cases_summary.xml
+++ b/app/src/main/res/layout/item_cases_summary.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
+    android:layout_marginBottom="8dp"
     app:cardCornerRadius="8dp"
     android:id="@+id/casesSummaryCV">
 
