--- a/app/src/main/res/layout/item_country_cases_summary.xml
+++ b/app/src/main/res/layout/item_country_cases_summary.xml
@@ -50,6 +50,7 @@
             android:id="@+id/confirmedTV"
             style="@style/Covid19TextView.Body"
             android:text="@string/confirmed_lower_case"
+            android:layout_marginStart="2dp"
             app:layout_constraintTop_toTopOf="@id/confirmedValueTV"
             app:layout_constraintStart_toEndOf="@id/confirmedValueTV"/>
 
@@ -67,6 +68,7 @@
             android:id="@+id/recoveredTV"
             style="@style/Covid19TextView.Body"
             android:text="@string/recovered_lower_case"
+            android:layout_marginStart="2dp"
             app:layout_constraintTop_toTopOf="@id/recoveredValueTV"
             app:layout_constraintStart_toEndOf="@id/recoveredValueTV"/>
 
@@ -84,6 +86,7 @@
             android:id="@+id/deathsTV"
             style="@style/Covid19TextView.Body"
             android:text="@string/deaths_lower_case"
+            android:layout_marginStart="2dp"
             app:layout_constraintTop_toTopOf="@id/deathsValueTV"
             app:layout_constraintStart_toEndOf="@id/deathsValueTV"/>
 
