Added Search Cases by country

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="ash">#818181</color>
     <color name="black">#000000</color>
     <color name="deaths">#EB5757</color>
+    <color name="grey">#F4F4F4</color>
 </resources>
