--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,12 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F4F4F4"
+    android:fillViewport="true"
     tools:context=".ui.landing.dashboard.DashboardFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#F4F4F4">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/welcomeTextTV"
@@ -141,6 +142,23 @@
             app:layout_constraintEnd_toStartOf="@id/filterIV"
             android:layout_marginEnd="28dp"/>
 
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/searchET"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:background="@drawable/bg_search_edit_text"
+            android:layout_marginTop="26dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/searchIV"
+            android:visibility="gone"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/casesRV"
             android:layout_width="0dp"
@@ -148,10 +166,11 @@
             tools:listitem="@layout/item_country_cases_summary"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@id/filterIV"
+            app:layout_constraintTop_toBottomOf="@id/searchET"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="12dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
