--- a/app/src/main/res/layout/activity_prevention_tips.xml
+++ b/app/src/main/res/layout/activity_prevention_tips.xml
@@ -16,17 +16,28 @@
         app:layout_constraintBottom_toTopOf="@id/preventionNext"
         android:layout_marginBottom="56dp">
 
-    <com.google.android.material.tabs.TabLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom" />
+
 
     </androidx.viewpager2.widget.ViewPager2>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/preventionTipTL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="46dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/preventionNext"
+        app:layout_constraintBottom_toBottomOf="@+id/preventionNext"
+        app:tabBackground="@drawable/tab_selector"
+        app:tabIndicatorHeight="0dp"/>
 
     <TextView
         android:id="@+id/preventionNext"
         style="@style/Covid19TextView"
         android:layout_marginTop="46dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/prevention_next"
         android:textColor="@color/black"
         android:textSize="12sp"
