--- a/app/src/main/res/layout/fragment_prevention_tip.xml
+++ b/app/src/main/res/layout/fragment_prevention_tip.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.preventionTips.PreventionTipFragment"
+   >
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:paddingStart="20dp"
     android:paddingEnd="20dp"
     android:paddingTop="48dp">
-
-
     <TextView
         android:id="@+id/preventionTipsTitleTV"
         style="@style/Covid19TextView"
@@ -36,7 +39,7 @@
         android:text="@string/prevention_summary1"
         android:textColor="@color/ash"
         android:textSize="16sp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/preventionTipsIV" />
 
@@ -64,3 +67,6 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.core.widget.NestedScrollView>
