--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,201 +7,16 @@
     android:layout_height="match_parent"
     android:background="#F4F4F4"
     android:fillViewport="true"
-    tools:context=".ui.landing.dashboard.DashboardFragment">
+    tools:context=".ui.landing.dashboard.DashboardFragment"
+    android:id="@+id/dashboardSRL">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/dashboardSRL"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dashboardRV"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        tools:listitem="@layout/item_country_cases_summary"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"
+        android:layout_marginTop="12dp"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/dashboardRV"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            tools:listitem="@layout/item_country_cases_summary"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:orientation="vertical"
-            android:layout_marginTop="12dp"/>
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone">
-
-        <TextView
-            android:id="@+id/welcomeTextTV"
-            style="@style/Covid19TextView"
-            android:text="Hello Survivor"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="@dimen/horizontal_margin"
-            android:layout_marginTop="46dp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/casesStatsRV"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/welcomeTextTV"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="24dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:clipToPadding="false"
-            tools:listitem="@layout/item_cases_summary"
-            tools:itemCount="3"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/handHygieneCV"
-            android:layout_width="0dp"
-            android:layout_height="112dp"
-            app:layout_constraintTop_toBottomOf="@id/casesStatsRV"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="48dp"
-            app:cardBackgroundColor="#F47920"
-            app:cardCornerRadius="8dp">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/whoLogoIV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toTopOf="@id/handHygieneTV"
-                    android:src="@drawable/ic_who_logo_white"
-                    app:layout_constraintVertical_chainStyle="packed"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginStart="@dimen/horizontal_margin"/>
-
-                <TextView
-                    android:id="@+id/handHygieneTV"
-                    style="@style/Covid19TextView.Body.Bold"
-                    android:text="@string/hand_hygiene_title"
-                    android:textColor="@color/white"
-                    app:layout_constraintTop_toBottomOf="@id/whoLogoIV"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginStart="@dimen/horizontal_margin"/>
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_who_light_logo"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
-
-                <ProgressBar
-                    android:id="@+id/handHygienePB"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:indeterminateTint="@color/white"
-                    android:visibility="gone"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:id="@+id/casesTitleTV"
-            style="@style/Covid19TextView.Head.Title"
-            android:layout_width="0dp"
-            android:text="@string/cases_title"
-            android:textColor="@color/colorPrimary"
-            app:layout_constraintTop_toBottomOf="@id/handHygieneCV"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="56dp"
-            android:layout_marginStart="@dimen/horizontal_margin"
-            android:layout_marginEnd="@dimen/horizontal_margin"/>
-
-        <TextView
-            android:id="@+id/lastUpdatedTV"
-            style="@style/Covid19TextView.Body.Bold"
-            android:text="@string/title_last_updated"
-            android:textColor="@color/ash"
-            app:layout_constraintTop_toTopOf="@id/filterIV"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/filterIV"
-            android:layout_marginStart="@dimen/horizontal_margin"/>
-
-        <TextView
-            android:id="@+id/lastUpdatedValueTV"
-            style="@style/Covid19TextView.Body.Bold"
-            android:text="12:30PM Today"
-            android:textColor="@color/black"
-            app:layout_constraintTop_toTopOf="@id/lastUpdatedTV"
-            app:layout_constraintStart_toEndOf="@id/lastUpdatedTV"/>
-
-        <ImageView
-            android:id="@+id/filterIV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_filter"
-            app:layout_constraintTop_toBottomOf="@id/casesTitleTV"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="@dimen/horizontal_margin"
-            android:layout_marginTop="26dp"/>
-
-        <ImageView
-            android:id="@+id/searchIV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_search"
-            app:layout_constraintTop_toTopOf="@id/filterIV"
-            app:layout_constraintEnd_toStartOf="@id/filterIV"
-            android:layout_marginEnd="28dp"/>
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/searchET"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:background="@drawable/bg_search_edit_text"
-            android:layout_marginTop="26dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/searchIV"
-            android:visibility="gone"/>
-
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/casesRV"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            tools:listitem="@layout/item_country_cases_summary"-->
-<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
-<!--            android:orientation="vertical"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/searchET"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            android:layout_marginTop="12dp"/>-->
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
