--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/navigation_podcast"
         android:name="it.weMake.covid19Companion.ui.landing.podcast.PodcastFragment"
         android:label="@string/title_podcast"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_podcast" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
