--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,9 +40,24 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="Covid19TextView.Body.Paragraph" parent="Covid19TextView">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Covid19TextView.Body.Small" parent="Covid19TextView">
+        <item name="android:textSize">12sp</item>
+    </style>
+
     <style name="ChipTextAppearance" parent="TextAppearance.MaterialComponents.Chip">
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Covid19TransparentImageButton">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:background">@drawable/bg_circle_white_transparent</item>
+        <item name="android:padding">10dp</item>
     </style>
 
 </resources>
