--- a/app/src/main/res/navigation/screening_tool_navigation.xml
+++ b/app/src/main/res/navigation/screening_tool_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/introFragment"
-        android:name="it.weMake.covid19Companion.ui.screening_tool.fragments.IntroFragment"
+        android:name="it.weMake.covid19Companion.ui.screening_tool.fragments.ScreeningToolIntroFragment"
         android:label="fragment_intro"
-        tools:layout="@layout/fragment_intro" />
+        tools:layout="@layout/fragment_screening_tool_intro" />
 </navigation>
