--- a/app/src/main/res/layout/activity_screening_tool.xml
+++ b/app/src/main/res/layout/activity_screening_tool.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.screening_tool.ScreeningToolActivity"
+    tools:context=".ui.screeningTool.ScreeningToolActivity"
     android:background="@color/grey">
 
     <fragment
