--- a/app/src/main/res/layout/fragment_screening_tool_intro.xml
+++ b/app/src/main/res/layout/fragment_screening_tool_intro.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.screening_tool.fragments.ScreeningToolIntroFragment">
+    tools:context=".ui.screeningTool.fragments.ScreeningToolIntroFragment">
 
     <ImageView
         android:id="@+id/screeningToolIV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_screening_tool"
+        android:src="@drawable/ic_screening_tool_full"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
