--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="grey">#F4F4F4</color>
     <color name="colorWhiteTransparent">#33FFFFFF</color>
     <color name="colorPrimaryDarkTransparent">#4D219653</color>
+    <color name="radioButtonText">#CBCFD4</color>
 </resources>
