--- a/app/src/main/res/drawable/bg_age_edit_text.xml
+++ b/app/src/main/res/drawable/bg_age_edit_text.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/grey"/>
+        android:color="@color/ash"/>
 
     <corners
         android:radius="8dp"/>
