--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.landing.help.HelpFragment"
-    android:background="@color/grey">
+    android:background="@color/ash">
 
     <LinearLayout
         android:layout_width="match_parent"
