--- a/app/src/main/res/layout/item_podcast_episode.xml
+++ b/app/src/main/res/layout/item_podcast_episode.xml
@@ -69,7 +69,7 @@
             android:id="@+id/dividerV"
             android:layout_width="0dp"
             android:layout_height="8dp"
-            android:background="@color/grey"
+            android:background="@color/ash"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/podcastDateTV"
