--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -37,16 +37,15 @@
             android:layout_marginTop="64dp"
             android:textSize="16sp"
             android:text="@string/rem_hand_loc"
-            app:layout_constraintEnd_toStartOf="@+id/rem_togIV"
+            app:layout_constraintEnd_toStartOf="@+id/rem_hand_locS"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_settings"
             />
 
         <Switch
-            android:id="@+id/rem_togIV"
+            android:id="@+id/rem_hand_locS"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:checked="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/rem_hand_loc"
             app:layout_constraintBottom_toBottomOf="@+id/rem_hand_loc"
@@ -63,7 +62,21 @@
             tools:itemCount="3"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            />
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/add_rem_location_TV"
+            android:layout_width="0dp"
+            style="@style/Covid19TextView.Body"
+            android:text="@string/add_location"
+            android:gravity="center_vertical"
+            android:drawableStart="@drawable/ic_add_black_24dp"
+            android:padding="8dp"
+            app:layout_constraintTop_toBottomOf="@id/rem_hand_locRV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"/>
+
         <View
             android:id="@+id/v_Line"
             android:layout_width="match_parent"
@@ -72,7 +85,7 @@
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rem_hand_locRV"
+            app:layout_constraintTop_toBottomOf="@id/add_rem_location_TV"
             />
 
         <TextView
