--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="horizontal_margin">20dp</dimen>
     <dimen name="margin_top_podcast_external_links">28dp</dimen>
+    <dimen name="bottom_sheet_indicator_margin_top">16dp</dimen>
+    <dimen name="bottom_sheet_corner_radius">32dp</dimen>
 </resources>
