showing the data of the sorted country cases

--- a/app/src/main/res/layout/country_cases.xml
+++ b/app/src/main/res/layout/country_cases.xml
@@ -22,7 +22,7 @@
         <TextView
             android:id="@+id/countryCasesTV"
             style="@style/Covid19TextView"
-            android:text="Lagos"
+            android:text="Nigeria"
             android:textColor="#818181"
             android:textSize="16sp"
             android:textStyle="normal"
