Getting daily motivation through fcm and setting it

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -21,14 +21,14 @@
                 android:id="@+id/logoIV"
                 android:layout_width="95dp"
                 android:layout_height="36dp"
-                android:src="@drawable/ic_logo_full"
+                android:src="@drawable/ic_app_logo_full"
                 android:layout_marginTop="45dp"
                 android:layout_gravity="center"/>
 
             <TextView
                 android:id="@+id/descriptionTV"
                 style="@style/Covid19TextView.Body.Paragraph"
-                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sapien, pharetra, vitae eu, amet, pulvinar scelerisque et neque. At tellus, in faucibus auctor. Viverra ligula arcu, consequat scelerisque feugiat non. Et viverra massa nisi, tellus."
+                tools:text="@string/lorem_ipsum_paragraph"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:gravity="center"
